Fix invisible class name
Fixes #2793

--- a/src/components/core/core.less
+++ b/src/components/core/core.less
@@ -41,7 +41,7 @@
   position: relative;
   transition-property: transform;
 }
-.swiper-invisible-blank-slide {
+.swiper-slide-invisible-blank {
   visibility: hidden;
 }
 /* Auto Height */
